--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 *.gch
 *.pch
 
+# Linker files
+*.ilk
+
+# Debugger Files
+*.pdb
+
 # Compiled Dynamic libraries
 *.so
 *.dylib
@@ -30,3 +36,12 @@
 *.exe
 *.out
 *.app
+
+# debug information files
+*.dwo
+
+
+# Project Specific
+*.zip
+/[De]ep/
+/[Bb]uild/
