--- a/setup/resources.rc
+++ b/setup/resources.rc
@@ -1,2 +1,31 @@
 // appicon.rc
 1 ICON "icon.ico"
+
+1 VERSIONINFO
+FILEVERSION     1,0,0,0
+PRODUCTVERSION  1,0,0,0
+FILEFLAGSMASK   0x3fL
+FILEFLAGS       0x0L
+FILEOS          0x40004L
+FILETYPE        0x1L
+FILESUBTYPE     0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "CompanyName",      "Kiliken"
+            VALUE "FileDescription",  "A frank game engine"
+            VALUE "FileVersion",      "1.0.0"
+            VALUE "InternalName",     "FrancumEngine.exe"
+            VALUE "OriginalFilename", "FrancumEngine.exe"
+            VALUE "ProductName",      "Francum Engine"
+            VALUE "ProductVersion",   "1.0.0"
+        END
+    END
+
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x0409, 1200
+    END
+END
